@@ -78,16 +78,15 @@ SC_MISSING_POSIX_HEADERS
 # It makes compiling go faster.  (This is only a performance feature.)
 #------------------------------------------------------------------------
 
-if test -z "$no_pipe"; then
-if test -n "$GCC"; then
-  AC_MSG_CHECKING([if the compiler understands -pipe])
-  OLDCC="$CC"  
-  CC="$CC -pipe"
-  AC_TRY_COMPILE(,,
-    AC_MSG_RESULT([yes]),
-    CC="$OLDCC"
-    AC_MSG_RESULT([no]))
-fi  
+if test -z "$no_pipe" && test -n "$GCC"; then
+    AC_CACHE_CHECK([if the compiler understands -pipe],
+	tcl_cv_cc_pipe, [
+	hold_cflags=$CFLAGS; CFLAGS="$CFLAGS -pipe"
+	AC_TRY_COMPILE(,, tcl_cv_cc_pipe=yes, tcl_cv_cc_pipe=no)
+	CFLAGS=$hold_cflags])
+    if test $tcl_cv_cc_pipe = yes; then
+	CFLAGS="$CFLAGS -pipe"
+    fi
 fi
 
 #------------------------------------------------------------------------
@@ -587,42 +586,47 @@ AC_MSG_RESULT([$tcl_ok])
 #------------------------------------------------------------------------
 AC_MSG_CHECKING([for timezone data])
 AC_ARG_WITH(tzdata,
-	AC_HELP_STRING([--with-tzdata],
-		[install timezone data (default: autodetect)]),
-	[tcl_ok=$withval], [tcl_ok=auto])
+    AC_HELP_STRING([--with-tzdata],
+	[install timezone data (default: autodetect)]),
+    [tcl_ok=$withval], [tcl_ok=auto])
 #
 # Any directories that get added here must also be added to the
 # search path in ::tcl::clock::Initialize (library/clock.tcl).
 #
 case $tcl_ok in 
-	no)
-		AC_MSG_RESULT([supplied by OS vendor])
-	;;
-	yes)
-		# nothing to do here
-	;;
-	auto*)
-		tcl_ok=yes
-		for dir in /usr/share/zoneinfo \
-			/usr/share/lib/zoneinfo \
-			/usr/lib/zoneinfo
-		do
-			if test -f $dir/UTC -o -f $dir/GMT
-			then
-				tcl_ok=no
-				AC_MSG_RESULT([$dir])
-				break
-			fi
-		done
-	;;
-	*)
-		AC_MSG_ERROR([invalid argument: $tcl_ok])	
-	;;
+    no)
+	AC_MSG_RESULT([supplied by OS vendor])
+    ;;
+    yes)
+	# nothing to do here
+    ;;
+    auto*)
+	AC_CACHE_VAL([tcl_cv_dir_zoneinfo], [
+	for dir in /usr/share/zoneinfo \
+		/usr/share/lib/zoneinfo \
+		/usr/lib/zoneinfo
+	do
+		if test -f $dir/UTC -o -f $dir/GMT
+		then
+			tcl_cv_dir_zoneinfo="$dir"
+			break
+		fi
+	done])
+	if test -n "$tcl_cv_dir_zoneinfo"; then
+	    tcl_ok=no
+	    AC_MSG_RESULT([$dir])
+	else
+	    tcl_ok=yes
+	fi
+    ;;
+    *)
+	AC_MSG_ERROR([invalid argument: $tcl_ok])	
+    ;;
 esac
 if test $tcl_ok = yes
 then
-	AC_MSG_RESULT([supplied by Tcl])
-	INSTALL_TZDATA=install-tzdata
+    AC_MSG_RESULT([supplied by Tcl])
+    INSTALL_TZDATA=install-tzdata
 fi
 AC_SUBST(INSTALL_TZDATA)
 
