@@ -1,3 +1,11 @@
+2007-02-04  Daniel Steffen  <das@users.sourceforge.net>
+
+	* unix/tcl.m4: use gcc4's __attribute__((__visibility__("hidden"))) if
+	available to define MODULE_SCOPE effective on all platforms.
+	* unix/configure.in: add caching to -pipe and zoneinfo checks.
+	* unix/configure: autoconf-2.59
+	* unix/tclConfig.h.in: autoheader-2.59
+
 2007-02-03  Joe Mistachkin  <joe@mistachkin.com>
 
 	* win/rules.vc: Fix platform specific file copy macros for downlevel
